eks-managed-nodegroup/manifests/movie-web-frontend/movie-web-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-movie-web-frontend 
  namespace: movie-web
spec:
  type: ClusterIP
  selector:
    app: movie-web-frontend 
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
