eks-managed-nodegroup/manifests/movie-web-frontend/movie-web-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-web-frontend-ingress
  namespace: movie-web
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-type: "nlb"
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-2:586794476206:certificate/c63ffd83-a202-433f-8b0b-68855bbcd71b
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  rules:
    - host: nhatanhweb.website
      http:
        paths:
          - path: /  
            pathType: Prefix  
            backend:
              service:
                name: k8s-movie-web-frontend  
                port:
                  number: 80
